# arbor-sonata

./: CMakeLists.txt  install-local.sh  readme.md
config/: env_arbor.sh
example/: .simulation_config.json.swp  CMakeLists.txt  circuit_config.json  example.cpp  simulation_config.json
example/components/density_params/: pas.json  pas_hh.json
example/components/morphologies/: soma_branch.swc
example/components/point_params/: expsyn.json
example/inputs/: gen_spikes.py  node_set.json
example/network/: edge_types.csv  edges_0.h5  edges_1.h5  edges_2.h5  edges_3.h5  here  node_types.csv  nodes_0.h5  nodes_1.h5
example/network/generate/: gen_edges.py  gen_nodes.py
install-arbor/scripts/: util.sh
network/: edge_types.csv  expsyn.json  gen_edges.py  gen_nodes.py  node_types.csv
network/dyn_params/: expsyn.json  pas.json  pas_hh.json  set_pas.json
network/generate/: gen_nodes.py
scripts/: build_arbor.sh  environment.sh
sonata/: CMakeLists.txt  csv_lib.cpp  csv_lib.hpp  data_management_lib.cpp  data_management_lib.hpp  dynamics_params_helper.cpp  hdf5_lib.cpp  hdf5_lib.hpp  mpi_helper.hpp  parameters.hpp  sonata.cpp  sonata_cell.hpp  sonata_io.hpp
sonata/include/: common_structs.hpp  csv_lib.hpp  data_management_lib.hpp  density_mech_helper.hpp  dynamics_params_helper.cpp  dynamics_params_helper.hpp  hdf5_lib.hpp  json_helper.cpp  json_helper.hpp  sonata_cell.hpp  sonata_excpetions.hpp  sonata_io.hpp  sonata_recipe.hpp
sonata/include/json/: json_params.hpp
systems/: daint-gpu.sh  daint-mc.sh  sonata-daint-gpu.sh  sonata-daint-mc.sh
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  test.cpp  test_csv.cpp  test_databse.cpp  test_dynamics.cpp  test_hdf5.cpp  test_io_desc.cpp  test_model_desc.cpp
test/unit/inputs/: clamp_electrode.csv  clamp_input.csv  dummy_0.csv  edges.csv  exp2syn.json  gen_edges.py  gen_nodes.py  nodes.csv  nodes_0.h5  nodes_1.h5  pas.json  pas_hh.json  set_pas.json  soma.swc
test/unit/inputs/generate/: gen_edges.py  gen_spikes.py
